bug16581 - fix linebreak in control dropdown items

--- a/sass/components/_works-controls.scss
+++ b/sass/components/_works-controls.scss
@@ -36,6 +36,10 @@
     padding: 0 35px 0 10px;
   }
 
+  .dropdown-menu a {
+    white-space: nowrap;
+  }
+
   .dropdown-toggle:after {
     @include add-sprite("angle--down--blue");
     @include align("vcenter");
